<resources>
    <string name="app_name">Digital File Cabinet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 8 characters long</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to create account -->
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="password_mismatch">Password do not match</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="welcome">"Welcome !"</string>
    <string name="action_Cancel">Cancel</string>
    <string name="Cancel_button">Cancel</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_email">Not a valid email</string>


    <!-- Strings related to activities -->
    <string name="Scan">Scan a document</string>
    <string name="Import">Import a document</string>
    <string name="Search_bar">Search</string>
    <string name="Open_document">Open a document</string>
    <string name="Organize_DFC">Organize DFC</string>
    <string name="Save_document">Save</string>
    <string name="search_hint">Search a document</string>
    <string name="Document_editText">Document Name</string>
    <string name="Document_ImageView">Document_view</string>
    <string name="document_folder">Folder</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">SIGN UP</string>
    <string name="profile_view">User Name</string>
    <string name="content_description_search">Search</string>

    <string name="content_description_signUp">Sign up</string>
    <string name="page_title_home">Home Page</string>
    <string name="page_title_sign_in">SIGN IN</string>
    <string name="page_title_create">Create Account</string>
    <string name="page_title">test tittle</string>
    <string name="page_title_document_view">Document View</string>
    <string name="created_date">Date created: </string>
    <string name="page_title_save_document">Save Document</string>
    <string name="take_picture">Scan</string>
    <string name="scan_document">take a picture of the document</string>
    <string name="capture_image">Scan Document</string>
    <string name="small_scaled_image">Small (Scaled) image</string>
    <string name="small_scale_image">Small scaled image view</string>
    <string name="original_image">original_image</string>
    <string name="profile_detail">Profile detail</string>
    <string name="navigation_item_name">Item Name</string>
    <string name="decrypt">Decrypt</string>
    <string name="edit_fragment_decrypt_xml_to_change_the_appearance">Edit fragment_decrypt.xml to change the appearance</string>
    <string name="edit_fragment_browse_xml_to_change_the_appearance">Edit fragment_decrypt.xml to change the appearance</string>
    <string name="browse">Browse file Database</string>
    <string name="edit_fragment_edit_xml_to_change_the_appearance">Edit fragment_decrypt.xml to change the appearance</string>
    <string name="edit">edit</string>
    <string name="encrypt">encrypt</string>
    <string name="edit_fragment_encrypt_xml_to_change_the_appearance">Edit fragment_encrypt.xml to change the appearance</string>
    <string name="edit_fragment_Import_xml_to_change_the_appearance">Edit fragment_Import.xml to change the appearance</string>
    <string name="edit_fragment_logout_xml_to_change_the_appearance">Edit fragment_logout.xml to change the appearance</string>
    <string name="edit_fragment_Scan_xml_to_change_the_appearance">Edit fragment_Scan.xml to change the appearance</string>
    <string name="goodbye">Goodbye</string>
    <string name="loading">Loading...</string>
    <string name="folder_image">folder_image</string>
    <string name="delete_user">"Delete "</string>
    <string name="deleteAccountDialog_title">Delete Account</string>
    <string name="deleteAccountDialog">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="document">Document View</string>
    <string name="document_name">Document Name</string>


    <string-array name="navigation_drawer_items_array">
        <item>Scan</item>
        <item>Import</item>
        <item>Encrypt</item>
        <item>Decrypt</item>
        <item>Browse</item>
        <item>Edit</item>
        <item>Logout</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Back</string>
    <string name="name_document">Name your Document</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="emptyDocumentList">Empty File Cabinet</string>
    <string name="docCreateDate">Create Date</string>
    <string name="docEditDate">Date Edited</string>
    <string name="apply_document_name">Apply</string>
    <string name="document_name_error">Must provide a filename</string>
    <string name="nameLabel">"Name: "</string>
    <string name="createDateLabel">Create on:</string>
    <string name="editedDateLabel">"Last edited on: "</string>

</resources>