<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/Search_bar"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Login_page"
        android:title="@string/login"
        android:contentDescription="@string/content_description_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_up"
        android:title="@string/sign_up"
        android:contentDescription="@string/content_description_signUp"
        app:showAsAction="never" />

</menu>