<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorTitleBar"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_edit_24" />

    <EditText
        android:id="@+id/documentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edit_round"
        android:layout_marginBottom="12dp"
        android:hint="@string/document_name"
        android:inputType="textAutoCorrect|textCapWords"
        android:autofillHints="@string/document_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/apply_name_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/button_round"
            android:layout_margin="70dp"
            android:text="@string/apply" />
    </LinearLayout>

</LinearLayout>