<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/prompt_email"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:accessibilityLiveRegion="none"
            android:padding="5dp"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:text="@string/prompt_password"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:padding="5dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:foregroundTint="#302D2D"
            android:foregroundTintMode="add"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="5dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:padding="5dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/loadingTextEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textStyle="italic"
            android:layout_marginStart="170dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="@drawable/button_round"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:text="@string/action_sign_up" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:background="@drawable/button_round"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:text="@string/action_sign_in" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/forgot_password"
        android:textColor="#54E3F1"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>