<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditDocumentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/DFCToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitleBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/page_title_document_view"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:titleTextColor="@color/colorTitleWhite" />

    <ScrollView
        android:id="@+id/documentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/imageCaptureView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/captureImageOriginal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_name" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:id="@+id/documentViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/nameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameLabel"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/document_name_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/document_name"
                        android:labelFor="@+id/documentName"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:padding="3dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="3dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="3dp"
                        android:text="@string/document_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/createDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createDateLabel"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/document_createdDate_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="3dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/docCreateDate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/editedDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editedDateLabel"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/document_editDate_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="3dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="3dp"
                        android:textSize="14sp"
                        android:text="@string/docEditDate" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/editDocumentButton"
                        android:layout_width="64dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="175dp"
                        android:background="@drawable/ic_edit_24"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/deleteDocumentButton"
                        android:layout_width="64dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_delete_24"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/closeDocumentButton"
                        android:layout_width="64dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_close_24"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>