<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:id="@+id/createLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="30dp"
        tools:isScrollContainer="true">

        <TextView
            android:id="@+id/fName_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/prompt_firstName"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:padding="5dp"
            android:layout_marginStart="45dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/prompt_firstName"
            android:inputType="textPersonName"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lName_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_lastName"
            android:textColor="#0C0B0B"
            android:padding="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:padding="5dp"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:ems="10"
            android:foregroundTint="#302D2D"
            android:foregroundTintMode="add"
            android:hint="@string/prompt_lastName"
            android:inputType="textPersonName"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/prompt_email"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:padding="5dp"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:padding="5dp"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:padding="5dp"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:ems="10"
            android:foregroundTint="#302D2D"
            android:foregroundTintMode="add"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/confirm_password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/prompt_confirm_password"
            android:textColor="#0C0B0B"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:padding="5dp"
            android:accessibilityLiveRegion="none"
            android:autofillHints=""
            android:background="@drawable/edit_round"
            android:ems="10"
            android:foregroundTint="#302D2D"
            android:foregroundTintMode="add"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/createProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="2dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:padding="5dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/loadingTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textStyle="italic"
                android:layout_marginStart="140dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="25dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                style="@style/Theme.AppCompat.DayNight.DarkActionBar"
                android:padding="4dp"
                android:background="@drawable/button_round"
                android:text="@string/Cancel_button" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                style="@style/Theme.AppCompat.DayNight.DarkActionBar"
                android:padding="4dp"
                android:background="@drawable/button_round"
                android:text="@string/sign_up_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>